--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "compression": "^1.7.0",
     "express": "^4.15.2",
     "express-param": "^1.0.2",
     "express-validator": "^3.2.0",
