--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "node --inspect app.js",
     "apidoc": "apidoc -i app/ -o public/",
     "local": "export SQL_USER=postgres && export SQL_PASSWORD=dnlzlsjwmfru! && export SQL_DATABASE=wekin && export INSTANCE_CONNECTION_NAME=127.0.0.1 && export SQL_CLIENT=pg && npm run start"
   },
