--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "googleapis": "^20.2.0",
     "iamporter": "^1.4.2",
     "json2xls": "^0.1.2",
+    "memory-cache": "^0.2.0",
     "moment": "^2.19.3",
     "node-excel-export": "^1.4.2",
     "node-schedule": "1.2.0",
